--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,15 @@ base {
     archivesName = "minestom-money-api"
 }
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
+
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+}
+
 repositories {
     // Maven Central
     mavenCentral()
