--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(21)
     }
+
+	withSourcesJar()
+	withJavadocJar()
 }
 
 publishing {
